Remove commons-collections dependency
Fix #12